Fix java version to 15
This commit fixes the Java version to 15 (not preview) to be
able to use this package independently of the progress of the
java ecosystem

Signed-off-by: Anton Oellerer <a.oellerer@docu-tools.com>