@@ -5,9 +5,9 @@ plugins {
 }
 
 group = 'com.docutools'
-version = '1.0.3'
-sourceCompatibility = 14
-targetCompatibility = 14
+version = '1.0.4'
+sourceCompatibility = 15
+targetCompatibility = 15
 
 configurations {
     compileOnly {
@@ -57,15 +57,7 @@ dependencies {
     implementation("org.apache.poi:poi-ooxml-schemas:4.1.2")
 }
 
-// Enable support for records, patterns and text blocks
-compileJava {
-    options.compilerArgs += ["--enable-preview"]
-}
-compileTestJava {
-    options.compilerArgs += ["--enable-preview"]
-}
 test {
-    jvmArgs '--enable-preview'
     useJUnitPlatform()
 }
 
